my-app/src/App.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}



.header-color {
background: #b92b27;  /* fallback for old browsers */
background: -webkit-linear-gradient(to right, #1565C0, #b92b27);  /* Chrome 10-25, Safari 5.1-6 */
background: linear-gradient(to right, #1565C0, #b92b27); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.landing-grid {
background: #b92b27;  /* fallback for old browsers */
background: -webkit-linear-gradient(to right, #1565C0, #b92b27);  /* Chrome 10-25, Safari 5.1-6 */
background: linear-gradient(to right, #1565C0, #b92b27); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
text-align: center;
position: fixed;
top: 0;
left: 0;
width: 100%;
height: 100%;

}

ul{
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.5rem!important;
  line-height: 56px!important;
  padding: 23px;
  color: darkslategray;
}
h2 {
  margin-bottom: 0px!important
}

h4 {
  margin-left: 25px;
  margin-top: 24px;
}

p {
  font-size: 16px;
  color: gray;
  padding: 22px;
}
.container {
width: 100%;
height: auto;
}


.avatar-img {
  height: 250px;
  border-radius: 50%;
  margin-top: 7em;
}

.avatar-img2 {
  width: 80%;
  border-radius: 15%;
  margin-top: 3em;
}

.banner-text {
  background-color: black;
  opacity: .7;
  width: 75%;
  margin: auto;
  border-radius: 10px;
  height: auto;
}

.banner-text h1 {
  font-size: 3rem;
  font-weight: bold;
  color: white;
  margin-bottom: 3px;
  padding: 2px;
}

.banner-text hr {
  border-top: 5px dotted white;
  width: 50%;
  margin: auto;
  margin-bottom: 3px;
}

.banner-text p {
  color: white;
  font-size: 3 rem;
  padding-bottom: 16px;
}

.social-links {
margin-left: auto;
margin-right: auto;
margin-top: 1em;
  
}

.icon {
  width: 8%;
  height: auto;
  margin-right: 2em;
}

.card {
  width: 320px;
  height: 320px;
  margin: auto;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.card-container {
  display: inline;
  justify-content: space-evenly;
}

.contact-body {
  margin: auto;
  width: 100%;
  height: 100%;
  padding-top: 3rem;
  justify-content: center;
}

.contact_description {
  width: 75%;
  margin: auto;
  padding-top: 3px;
  font-family: 'Barlow', sans-serif;
}

.contact-grid {
  background: whitesmoke;
  justify-content: center;
  text-align: center;
  color: black;
  border: 2px solid red;
  width: 88%;
  height: auto;
  box-shadow: 50%;
}

.name {
  font-family: 'Barlow', sans-serif;
  font-weight: bolder;
  font-size: 4rem;
  margin-top: 2rem;
  line-height: 44px;
}

.contact-grid hr {
  border-top: 5px dotted black;
  width: 50%;
  margin: auto;
}



/* Resume Styles */

.resume-right-col {
background-color: #27221F;
color: white;
}

/* About Me styles */
.about-me-left{
  background-color: #27221F;
  color: white;


}

.about-me-right {
  color: black;
  background-color: white;
}

.mdl-list-item {
  overflow: visible!important
}

.mdl-layout {
background: url(https://images.pexels.com/photos/1227520/pexels-photo-1227520.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
}

.resume-right-col {
  opacity: .7;
  border-radius: 5%;
}

.text-card {
  background-color: black;
  opacity: .7;
  border-radius: 5%;
}

.mdl-navigation__link {
  font-size: 17px!important
}

